--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Portfolio website</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style.css">
-
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+	<title>Portfolio website</title>
 </head>
 <body>
 
@@ -59,7 +56,6 @@
 
 		<div class="box">
 			<div class="card">
-				<i class="fas fa-bars"></i>
 				<h5>Web Development</h5>
 				<div class="pra">
 					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
@@ -71,7 +67,6 @@
 			</div>
 
 			<div class="card">
-				<i class="far fa-user"></i>
 				<h5>Web Development</h5>
 				<div class="pra">
 					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
@@ -83,7 +78,6 @@
 			</div>
 
 			<div class="card">
-				<i class="far fa-bell"></i>
 				<h5>Web Development</h5>
 				<div class="pra">
 					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
@@ -105,9 +99,9 @@
 		<p>Abhishek Kr. Gupta</p>
 		<p>For more HTML, CSS, and coding tutorial - please click on the link below to subscribe to my channel:</p>
 		<div class="social">
-			<a href="#"><i class="fab fa-facebook-f"></i></a>
-			<a href="#"><i class="fab fa-instagram"></i></a>
-			<a href="#"><i class="fab fa-dribbble"></i></a>
+			<a href="#">f</a>
+			<a href="#">i</a>
+			<a href="#">ln</a>
 		</div>
 		<p class="end">CopyRight By Abhishek kumar gupta</p>
 	</footer>
